# bcs-zig

./: .gitignore  AUDIT.md  README.md  build.zig  build.zig.zon
app/: components.json  index.html  package.json
app/public/: bench.wasm
app/src/: App.tsx
app/src/lib/: payloads.ts  ts-bench.ts  ts-worker.ts  wasm-bench.ts  wasm-worker.ts
bench/: Cargo.toml  corpus_crossval.rs  corpus_crossval.zig  crossval.rs  crossval.zig  deser_crossval.rs  deser_crossval.zig  error_crossval.rs  error_crossval.zig  lib.rs  lib.zig  limit_crossval.rs  limit_crossval.zig  main.rs  main.zig  malformed_corpus.txt  mutation_crossval.rs  mutation_crossval.zig  random_crossval.rs  random_crossval.zig  reader_crossval.rs  reader_crossval.zig  seed_crossval.rs  seed_crossval.zig  sui_crossval.rs  sui_crossval.zig  throughput.rs  throughput.zig  verify_compat.sh
bench/app/: index.html
bench/app/src/components/ui/: select.tsx
bench/app/src/lib/: ts-worker.ts  types.ts
src/: bcs.zig
