[package]
name = "bcs_bench"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
bcs = "=0.1.6"
serde = { version = "=1.0.219", features = ["derive"] }
thiserror = "=1.0.68"

[[bin]]
name = "throughput"
path = "throughput.rs"

[[bin]]
name = "crossval"
path = "crossval.rs"

[[bin]]
name = "deser_crossval"
path = "deser_crossval.rs"

[[bin]]
name = "sui_crossval"
path = "sui_crossval.rs"

[[bin]]
name = "limit_crossval"
path = "limit_crossval.rs"

[[bin]]
name = "random_crossval"
path = "random_crossval.rs"

[[bin]]
name = "error_crossval"
path = "error_crossval.rs"

[[bin]]
name = "mutation_crossval"
path = "mutation_crossval.rs"

[[bin]]
name = "reader_crossval"
path = "reader_crossval.rs"

[[bin]]
name = "seed_crossval"
path = "seed_crossval.rs"

[[bin]]
name = "corpus_crossval"
path = "corpus_crossval.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
